# qtomm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  resources.qrc
cmake/: GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in
keybindings/: default_keybindings.cfg
layouts/: default_layout.ini
src/: CMakeLists.txt  common.h  config.cpp.in  config.h.in  transform.h
src/animation/: CMakeLists.txt
src/aspects/: CMakeLists.txt
src/color/: CMakeLists.txt
src/commands/: CMakeLists.txt
src/geometry/: CMakeLists.txt  vec2.h
src/keybindings/: CMakeLists.txt
src/main/: CMakeLists.txt  QSkiaWidget.cpp  QSkiaWidget.h  SampleRender.cpp  SampleRender.h  main.cpp
src/mainwindow/: CMakeLists.txt
src/mainwindow/toolbar/: CMakeLists.txt
src/mainwindow/viewport/: CMakeLists.txt
src/managers/: CMakeLists.txt
src/managers/boundingboxmanager/: CMakeLists.txt
src/managers/curvemanager/: CMakeLists.txt
src/managers/dopesheetmanager/: CMakeLists.txt
src/managers/historymanager/: CMakeLists.txt
src/managers/nodemanager/: CMakeLists.txt
src/managers/objectmanager/: CMakeLists.txt
src/managers/propertymanager/: CMakeLists.txt
src/managers/pythonconsole/: CMakeLists.txt
src/managers/stylemanager/: CMakeLists.txt
src/managers/timeline/: CMakeLists.txt
src/nodesystem/: CMakeLists.txt
src/nodesystem/nodes/: CMakeLists.txt
src/objects/: CMakeLists.txt
src/path/: CMakeLists.txt
src/preferences/: CMakeLists.txt
src/properties/: CMakeLists.txt
src/properties/propertygroups/: CMakeLists.txt
src/propertywidgets/: CMakeLists.txt
src/propertywidgets/boolpropertywidget/: CMakeLists.txt
src/propertywidgets/colorpropertywidget/: CMakeLists.txt
src/propertywidgets/floatpropertywidget/: CMakeLists.txt
src/propertywidgets/floatvectorpropertywidget/: CMakeLists.txt
src/propertywidgets/integerpropertywidget/: CMakeLists.txt
src/propertywidgets/integervectorpropertywidget/: CMakeLists.txt
src/propertywidgets/numericpropertywidget/: CMakeLists.txt
src/propertywidgets/optionpropertywidget/: CMakeLists.txt
src/propertywidgets/referencepropertywidget/: CMakeLists.txt
src/propertywidgets/splinepropertywidget/: CMakeLists.txt
src/propertywidgets/stringpropertywidget/: CMakeLists.txt
src/propertywidgets/triggerpropertywidget/: CMakeLists.txt
src/propertywidgets/vectorpropertywidget/: CMakeLists.txt
src/python/: CMakeLists.txt
src/renderers/: CMakeLists.txt
src/scene/: CMakeLists.txt
src/scene/history/: CMakeLists.txt
src/serializers/: CMakeLists.txt
src/serializers/json/: CMakeLists.txt
src/tags/: CMakeLists.txt
src/tools/: CMakeLists.txt
src/tools/handles/: CMakeLists.txt
src/widgets/: CMakeLists.txt
src/widgets/colorwidget/: CMakeLists.txt
uicolors/: ui-colors-dark.cfg  ui-colors-light.cfg
